--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.407.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
     "zod": "^3.23.8"
   },
